add new metrics
